-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 15, 16
-
Component/s: hotspot
-
b12
gc/z/TestUncommit.java
start failing again in JDK 15 b27 ATR testing.
java.lang.Exception: Uncommitted too fast
at gc.z.TestUncommit.test(TestUncommit.java:96)
at gc.z.TestUncommit.main(TestUncommit.java:126)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:64)
at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.base/java.lang.reflect.Method.invoke(Method.java:564)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
at java.base/java.lang.Thread.run(Thread.java:832)
JavaTest Message: Test threw exception: java.lang.Exception: Uncommitted too fast
JavaTest Message: shutting down test
start failing again in JDK 15 b27 ATR testing.
java.lang.Exception: Uncommitted too fast
at gc.z.TestUncommit.test(TestUncommit.java:96)
at gc.z.TestUncommit.main(TestUncommit.java:126)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:64)
at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.base/java.lang.reflect.Method.invoke(Method.java:564)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
at java.base/java.lang.Thread.run(Thread.java:832)
JavaTest Message: Test threw exception: java.lang.Exception: Uncommitted too fast
JavaTest Message: shutting down test
- duplicates
-
JDK-8248436 gc/z/TestUncommit.java#id0 failed "Exception: Uncommitted too fast"
-
- Closed
-