8248266: ZGC: TestUncommit.java fails due to "Exception: Uncommitted too fast" again

Reviewed-by: shade, eosterlund